WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236172
Tab characters and ch units do not obey synthetic bold width adjustments correctly
https://bugs.webkit.org/show_bug.cgi?id=236172
Summary
Tab characters and ch units do not obey synthetic bold width adjustments corr...
Myles C. Maxfield
Reported
2022-02-04 21:59:14 PST
Tab characters and ch units do not obey synthetic bold width adjustments correctly
Attachments
Patch
(20.53 KB, patch)
2022-02-04 22:04 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(22.03 KB, patch)
2022-02-10 00:04 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(28.64 KB, patch)
2022-02-10 17:06 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(30.16 KB, patch)
2022-02-10 20:18 PST
,
Myles C. Maxfield
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-02-04 22:04:35 PST
Created
attachment 450974
[details]
Patch
Myles C. Maxfield
Comment 2
2022-02-10 00:04:59 PST
Created
attachment 451501
[details]
Patch
Myles C. Maxfield
Comment 3
2022-02-10 17:06:04 PST
Created
attachment 451622
[details]
Patch
Myles C. Maxfield
Comment 4
2022-02-10 20:18:08 PST
Created
attachment 451637
[details]
Patch
alan
Comment 5
2022-02-10 21:17:49 PST
Comment on
attachment 451637
[details]
Patch nice.
Myles C. Maxfield
Comment 6
2022-02-11 00:41:03 PST
Committed
r289609
(
247122@trunk
): <
https://commits.webkit.org/247122@trunk
>
Radar WebKit Bug Importer
Comment 7
2022-02-11 00:42:16 PST
<
rdar://problem/88803268
>
Darin Adler
Comment 8
2022-03-03 14:21:26 PST
Comment on
attachment 451637
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=451637&action=review
> Source/WebCore/ChangeLog:15 > + This patch adds a 2-value enum argument to the Font::widthForGlyph() function, so callers > + can pass in which behavior they want. The function has a default value to include the > + synthetic bold expansion.
Why is an argument better than two functions?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug