Tab characters and ch units do not obey synthetic bold width adjustments correctly https://bugs.webkit.org/show_bug.cgi?id=236172

Reviewed by Alan Bujtas.

Source/WebCore:

It turns out we have a lot of places where code wants to know the synthetic-bold-expanded
width of characters. One place is 'tab-width: <integer>' and another is the 'ch' unit.
However, WidthIterator and ComplexTextController don't want the synthetic-bold-expanded
widths, because they explicitly apply synthetic bold after shaping.

This patch adds a 2-value enum argument to the Font::widthForGlyph() function, so callers
can pass in which behavior they want. The function has a default value to include the
synthetic bold expansion.

I then audited every call site of this function, and passed in the correct enum value.
Doing this led me to discover two bugs where the wrong behavior was being used, and this
patch fixes them and adds tests for them.

Tests: fast/text/ch-unit-synthetic-bold.html
       fast/text/tab-width-synthetic-bold-complex.html
       fast/text/tab-width-synthetic-bold.html

* layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::fallbackFontsForRunWithIterator):
* platform/graphics/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):
(WebCore::ComplexTextController::ComplexTextRun::ComplexTextRun):
* platform/graphics/Font.cpp:
(WebCore::Font::platformGlyphInit):
* platform/graphics/Font.h:
(WebCore::Font::spaceWidth const):
(WebCore::Font::widthForGlyph const):
* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::widthForSimpleText const):
* platform/graphics/FontCascade.h:
(WebCore::FontCascade::tabWidth const):
* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::advanceInternal):
(WebCore::WidthIterator::calculateAdditionalWidth const):

LayoutTests:

3 new tests. Also, the changes in ignored-properties-001-expected.txt are a revert of the rebaseline in
r281687. That rebaseline was wrong, so this undoes it.

* fast/text/ch-unit-synthetic-bold-expected.html: Added.
* fast/text/ch-unit-synthetic-bold.html: Added.
* fast/text/tab-width-synthetic-bold-complex-expected.html: Added.
* fast/text/tab-width-synthetic-bold-complex.html: Added.
* fast/text/tab-width-synthetic-bold-expected.html: Added.
* fast/text/tab-width-synthetic-bold.html: Added.
* platform/ios/imported/w3c/web-platform-tests/mathml/relations/css-styling/ignored-properties-001-expected.txt:
* platform/mac-catalina/imported/w3c/web-platform-tests/mathml/relations/css-styling/ignored-properties-001-expected.txt:
* platform/mac-mojave/imported/w3c/web-platform-tests/mathml/relations/css-styling/ignored-properties-001-expected.txt:
* platform/mac/imported/w3c/web-platform-tests/mathml/relations/css-styling/ignored-properties-001-expected.txt:


Canonical link: https://commits.webkit.org/247122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289609 268f45cc-cd09-0410-ab3c-d52691b4dbfc